<resources>
    <string name="app_name">WalletBus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Adicionar Cartões</string>
    <string name="logo_walletbus">Logo WalletBus</string>
    <string name="walletbus">WalletBus</string>
    <string name="walletbus_gmail_com">walletbus@gmail.com</string>
    <string name="in_cio">Início</string>
    <string name="pontos_de_recargas">Pontos de Recargas</string>
    <string name="hist_rico">Histórico</string>
    <string name="ajuda">Ajuda</string>
    <string name="sair">Sair</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="primeiro_acesso">PRIMEIRO ACESSO</string>
    <string name="cadastro">Cadastro</string>
    <string name="bot_o_login">Botão Login</string>
    <string name="esqueci_string_esqueci_minha_senha">Esqueci @string/esqueci_minha_senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="logo">Logo</string>
    <string name="ddd">DDD:</string>
    <string name="emailc">Email:</string>
    <string name="confirme_seu_email">Confirme seu Email:</string>
    <string name="telefone">Telefone:</string>
    <string name="senhac">Senha:</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="nome">Nome:</string>
    <string name="confirme_sua_senha">Confirme sua Senha:</string>
    <string name="preencha_com_seus_dados">Preencha com seus Dados</string>
    <string name="cpf">CPF:</string>
    <string name="crie_sua_conta_gr_tis">Crie sua conta grátis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pontos_de_recargas2">Pontos de Recargas</string>
    <string name="title_activity_maps">Map</string>
    <string name="sobre">Sobre</string>
    <string name="carregando">Carregando...</string>
    <string name="recarregar">RECARREGAR</string>
    <string name="escolha_um_valor">DIGITE UM VALOR</string>
    <string name="r_00_00">R$ 00.00</string>
    <string name="ex_16_14_2019">Ex: 16/14/2019</string>
    <string name="por_favor_informe_seu_e_mail_para_recupera_o_de_conta">Por favor, informe seu e-mail para recuperação de conta:</string>
    <string name="enviar">Enviar</string>
    <string name="categoria">Categoria</string>
    <string name="valor">valor</string>
    <string name="data">Data</string>
    <string name="com_seu_saldo_atual_ainda_restam_5_dias_de_passagens">Com seu saldo atual ainda restam 5 dias de passagens</string>
    <string name="calcular_passagens_restantes">Simular Saldo</string>
    <string name="quanto_custa_uma_passagem_para_voc_caso_pague_metade_informe_o_valor">Quanto custa uma passagem para você? Caso pague metade informe o valor.</string>
    <string name="quantas_passagens_voc_usa_em_m_dia_por_dia">Quantas passagens você usa em média por dia?</string>
    <string name="ex_2">EX: 2</string>
    <string name="numero_do_cart_o">Numero do Cartão</string>
</resources>
