<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_gray_24dp"
            android:title="@string/in_cio"/>
        <item
            android:id="@+id/nav_pontos"
            android:icon="@drawable/ic_room_gray_24dp"
            android:title="@string/pontos_de_recargas" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_poll_gray_24dp"
            android:title="@string/hist_rico" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_gray_24dp"
            android:title="@string/ajuda" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_exit_to_app_gray_24dp"
            android:title="@string/sair"/>

    </group>


</menu>
